@@ -48,13 +48,12 @@ static gboolean actions_lock = FALSE;
 
 /* Init preferences structure */
 prefs_t prefs = {DEF_USE_COPY,        DEF_USE_PRIMARY,      DEF_SYNCHRONIZE,
-                 DEF_SHOW_INDEXES,    DEF_SAVE_HISTORY,     DEF_HISTORY_LIMIT,
-                 DEF_SMALL_HISTORY,   DEF_HISTORY_SMALL,
+                 DEF_SHOW_INDEXES,    DEF_SAVE_URIS         DEF_SAVE_HISTORY,
+                 DEF_HISTORY_LIMIT,   DEF_SMALL_HISTORY,    DEF_HISTORY_SMALL,
                  DEF_HYPERLINKS_ONLY, DEF_CONFIRM_CLEAR,    DEF_FULL_HIST_BUTTON,
                  DEF_SINGLE_LINE,     DEF_REVERSE_HISTORY,  DEF_ITEM_LENGTH,
-                 DEF_ELLIPSIZE,
-                 INIT_HISTORY_KEY,    INIT_ACTIONS_KEY,     INIT_MENU_KEY,
-                 INIT_SEARCH_KEY,     DEF_NO_ICON};
+                 DEF_ELLIPSIZE,       INIT_HISTORY_KEY,     INIT_ACTIONS_KEY,
+                 INIT_MENU_KEY,       INIT_SEARCH_KEY,      DEF_NO_ICON};
 
 /* Called every CHECK_INTERVAL seconds to check for new items */
 static gboolean
